[tool.poetry]
name = "bee-copy"
version = "0.1.0"
description = ""
authors = ["Brian Hudson <reallybrianhudson@gmail.com>"]
readme = "README.md"
packages = [{include = "bee_copy"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
